--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
       <li><a href="/absence">Odsustvo</a></li>
       <li><a href="/expenses">Putni troškovi</a></li>
       <li><a href="/rules">Dokumenti</a></li>
-      <li><a href="#">Ispiti</a></li>
+      <li><a href="/exams">Ispiti</a></li>
       <li><a href="#">Upute za korištenje sustava</a></li>
     </ul>
   </nav>
