--- a/src/app/components/time-absent/time-absent.component.html
+++ b/src/app/components/time-absent/time-absent.component.html
@@ -8,7 +8,7 @@
             <li><a class="active" href="/absence">Odsustvo</a></li>
             <li><a href="/expenses">Putni troškovi</a></li>
             <li><a href="/rules">Dokumenti</a></li>
-            <li><a href="#">Ispiti</a></li>
+            <li><a href="/exams">Ispiti</a></li>
             <li><a href="#">Upute za korištenje sustava</a></li>
         </ul>
     </nav>
