--- a/src/app/components/basket-rules/basket-rules.component.html
+++ b/src/app/components/basket-rules/basket-rules.component.html
@@ -8,7 +8,7 @@
       <li><a href="/absence">Odsustvo</a></li>
       <li><a href="/expenses">Putni troškovi</a></li>
       <li><a class="active" href="/rules">Dokumenti</a></li>
-      <li><a href="#">Ispiti</a></li>
+      <li><a href="/exams">Ispiti</a></li>
       <li><a href="#">Upute za korištenje sustava</a></li>
     </ul>
   </nav>
@@ -18,8 +18,8 @@
       <div class="library-header">
         <h1 class="library-title">Dokumenti</h1>
         <p class="library-description">
-          Bitni resursi za košarku i službeni pravilnici za suce i službenike
-          igara u Hrvatskoj. Ova zbirka uključuje najnovije priručnike FIBA,
+          Među dokumentacijom se nalaze službeni pravilnici, preporuke i upute za suce i službenike
+          košarkaških utakmica u Hrvatskoj. Ova zbirka uključuje najnovije priručnike FIBA,
           službena pravila košarke, tumačenja i tehničke vodiče za podršku
           profesionalnom razvoju i osiguravanje dosljednih standarda za igranje
           igara na svim razinama natjecanja.
@@ -35,7 +35,8 @@
             </div>
             <div class="material-info">
               <div class="material-meta">
-                <span class="material-date">Valid as of October 1st, 2024</span>
+                <span class="material-date">1/10/2024</span>
+                <span class="material-badge">FIBA</span>
               </div>
               <h3 class="material-title">
                 <a href="https://library.fibairef.basketball/cdn/OBR2024"
@@ -56,10 +57,13 @@
             </div>
             <div class="material-info">
               <div class="material-meta">
-                <span class="material-date">Valid as of October 1st, 2024</span>
+                <span class="material-date">1/10/2024</span>
+                <span class="material-badge">FIBA</span>
               </div>
               <h3 class="material-title">
-                <a href="https://library.fibairef.basketball/cdn/OBRI2024">Official Basketball Rules Interpretations 2024 - v1.0a</a>
+                <a href="https://library.fibairef.basketball/cdn/OBRI2024"
+                  >Official Basketball Rules Interpretations 2024 - v1.0a</a
+                >
               </h3>
             </div>
           </div>
@@ -75,10 +79,15 @@
             </div>
             <div class="material-info">
               <div class="material-meta">
-                <span class="material-date">Valid as of October 1st, 2024</span>
+                <span class="material-date">1/10/2024</span>
+                <span class="material-badge">FIBA</span>
               </div>
-              <h3 class="material-title"><a href="https://library.fibairef.basketball/cdn/OBR2024_Equipment">
-                Official Basketball Rules 2024: Basketball Equipment - v1.0</a>
+              <h3 class="material-title">
+                <a
+                  href="https://library.fibairef.basketball/cdn/OBR2024_Equipment"
+                >
+                  Official Basketball Rules 2024: Basketball Equipment - v1.0</a
+                >
               </h3>
             </div>
           </div>
@@ -94,10 +103,15 @@
             </div>
             <div class="material-info">
               <div class="material-meta">
-                <span class="material-date">Valid as of October 1st, 2024</span>
+                <span class="material-date">1/10/2024</span>
+                <span class="material-badge">FIBA</span>
               </div>
-              <h3 class="material-title"><a href="https://library.fibairef.basketball/cdn/OBR_Changes2024">
-                Official Basketball Rules 2024 Changes - v2.0a</a>
+              <h3 class="material-title">
+                <a
+                  href="https://library.fibairef.basketball/cdn/OBR_Changes2024"
+                >
+                  Official Basketball Rules 2024 Changes - v2.0a</a
+                >
               </h3>
             </div>
           </div>
@@ -116,8 +130,12 @@
                 <span class="material-date">15/12/2024</span>
                 <span class="material-badge">FIBA</span>
               </div>
-              <h3 class="material-title"><a href="https://library.fibairef.basketball/doc/MlVhTUhWZzlsaVFLaFNBWFFRSnZmUT09">
-                INDIVIDUAL OFFICIATING TECHNIQUES 2024 v2.5 (IOT)</a>
+              <h3 class="material-title">
+                <a
+                  href="https://library.fibairef.basketball/doc/MlVhTUhWZzlsaVFLaFNBWFFRSnZmUT09"
+                >
+                  INDIVIDUAL OFFICIATING TECHNIQUES 2024 v2.5 (IOT)</a
+                >
               </h3>
             </div>
           </div>
@@ -135,8 +153,12 @@
                 <span class="material-date">15/12/2024</span>
                 <span class="material-badge">FIBA</span>
               </div>
-              <h3 class="material-title"><a href="https://library.fibairef.basketball/doc/WUVSODVLcUVKckNaM3pBbFBQU0JVZz09">
-                3 PERSON OFFICIATING - BASIC 2024 v2.5 (SPO)</a>
+              <h3 class="material-title">
+                <a
+                  href="https://library.fibairef.basketball/doc/WUVSODVLcUVKckNaM3pBbFBQU0JVZz09"
+                >
+                  3 PERSON OFFICIATING - BASIC 2024 v2.5 (SPO)</a
+                >
               </h3>
             </div>
           </div>
@@ -155,8 +177,12 @@
                 <span class="material-date">01/12/2022</span>
                 <span class="material-badge">FIBA</span>
               </div>
-              <h3 class="material-title"><a href="https://library.fibairef.basketball/doc/Z05xejI2YmIrMzJVNnY2a09hYTNZdz09">
-                BASIC BASKETBALL OFFICIATING TERMINOLOGY (v2.1)</a>
+              <h3 class="material-title">
+                <a
+                  href="https://library.fibairef.basketball/doc/Z05xejI2YmIrMzJVNnY2a09hYTNZdz09"
+                >
+                  BASIC BASKETBALL OFFICIATING TERMINOLOGY (v2.1)</a
+                >
               </h3>
             </div>
           </div>
@@ -173,8 +199,12 @@
                 <span class="material-date">01/11/2022</span>
                 <span class="material-badge">FIBA</span>
               </div>
-              <h3 class="material-title"><a href="https://library.fibairef.basketball/doc/anZ0UTNCaTlZNVdCZW1IYTZHOFNjUT09">
-                FIBA TABLE OFFICIALS MANUAL (v6.0, OBR 2022)</a>
+              <h3 class="material-title">
+                <a
+                  href="https://library.fibairef.basketball/doc/anZ0UTNCaTlZNVdCZW1IYTZHOFNjUT09"
+                >
+                  FIBA TABLE OFFICIALS MANUAL (v6.0, OBR 2022)</a
+                >
               </h3>
             </div>
           </div>
