--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="page-container">
 <div class="login-container">
   <div class="logo-image">
-    <img class="logo" src="assets\Logo.jpeg" alt="logo image">
+    <img class="logo" src="assets\HKS_Logo.webp" alt="logo image">
   </div>
 
   <h2> Prijava u sustav </h2>
