--- a/src/app/components/basket-rules/basket-rules.component.html
+++ b/src/app/components/basket-rules/basket-rules.component.html
@@ -1,22 +1,14 @@
 <app-header></app-header>
+
+<app-sidebar></app-sidebar>
+
 <div class="main-layout">
-  <!-- Sidebar -->
-  <nav class="sidebar">
-    <ul>
-      <li><a href="/home">Početna stranica</a></li>
-      <li><a href="/assigned">Moje utakmice</a></li>
-      <li><a href="/absence">Odsustvo</a></li>
-      <li><a href="/expenses">Putni troškovi</a></li>
-      <li><a class="active" href="/rules">Dokumenti</a></li>
-      <li><a href="/exams">Ispiti</a></li>
-      <li><a href="#">Upute za korištenje sustava</a></li>
-    </ul>
-  </nav>
+  
   <!-- Content -->
   <section class="content">
     <div class="material-library">
       <div class="library-header">
-        <h1 class="library-title">Dokumenti</h1>
+        <h2 class="library-title">Dokumenti</h2>
         <p class="library-description">
           Među dokumentacijom se nalaze službeni pravilnici, preporuke i upute za suce i službenike
           košarkaških utakmica u Hrvatskoj. Ova zbirka uključuje najnovije priručnike FIBA,
