--- a/src/app/components/exams/exams.component.html
+++ b/src/app/components/exams/exams.component.html
@@ -1,18 +1,11 @@
 <!-- src/app/components/exams/exams.component.html -->
 <app-header></app-header>
+
+<app-sidebar></app-sidebar>
+
+
 <div class="main-layout">
-  <!-- Sidebar -->
-  <nav class="sidebar">
-    <ul>
-      <li><a href="/home">Početna stranica</a></li>
-      <li><a href="/assigned">Moje utakmice</a></li>
-      <li><a href="/absence">Odsustvo</a></li>
-      <li><a href="/expenses">Putni troškovi</a></li>
-      <li><a href="/rules">Dokumenti</a></li>
-      <li><a class="active" href="/exams">Ispiti</a></li>
-      <li><a href="#">Upute za korištenje sustava</a></li>
-    </ul>
-  </nav>
+
   
   <!-- Content -->
   <section class="content">
