--- a/src/app/components/games-assigned/games-assigned.component.html
+++ b/src/app/components/games-assigned/games-assigned.component.html
@@ -1,18 +1,11 @@
 <!-- Updated src/app/components/games-assigned/games-assigned.component.html -->
 <app-header></app-header>
-<div class="main-layout">
+
   <!-- Sidebar -->
-  <nav class="sidebar">
-    <ul>
-      <li><a href="/home">Početna stranica</a></li>
-      <li><a class="active" href="/assigned">Moje utakmice</a></li>
-      <li><a href="/absence">Odsustvo</a></li>
-      <li><a href="/expenses">Putni troškovi</a></li>
-      <li><a href="/rules">Dokumenti</a></li>
-      <li><a href="/exams">Ispiti</a></li>
-      <li><a href="#">Upute za korištenje sustava</a></li>
-    </ul>
-  </nav>
+  <app-sidebar></app-sidebar>
+  
+<div class="main-layout">
+
   
   <!-- Content -->
   <section class="content">
