--- a/src/app/components/expense-report-details/expense-report-details.component.html
+++ b/src/app/components/expense-report-details/expense-report-details.component.html
@@ -1,17 +1,10 @@
 <app-header></app-header>
+
+<app-sidebar></app-sidebar>
+
+
 <div class="main-layout">
-    <!-- Sidebar -->
-    <nav class="sidebar">
-        <ul>
-            <li><a href="/home">Početna stranica</a></li>
-            <li><a href="/assigned">Moje utakmice</a></li>
-            <li><a href="/absence">Odsustvo</a></li>
-            <li><a class="active" href="/expenses">Putni troškovi</a></li>
-            <li><a href="/rules">Dokumenti</a></li>
-            <li><a href="#">Ispiti</a></li>
-            <li><a href="#">Upute za korištenje sustava</a></li>
-        </ul>
-    </nav>
+
     
     <section class="content">
         <!-- Loading State -->
