--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <!-- src/app/components/header/header.component.html -->
 <header class="header">
-  <h1>IS Košarkaškog Saveza</h1>
+  <img class="logo" src="assets\HKS_Logo.webp" alt="hks-logo">
+  <h1>Hrvatski Košarkaški Savez</h1>
   <div class="user-info">
     <div class="header-buttons">
       
