--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,18 +1,10 @@
 <app-header></app-header>
 
+<app-sidebar></app-sidebar>
+
+
 <div class="main-layout">
-  <!-- Sidebar -->
-  <nav class="sidebar">
-    <ul>
-      <li><a class="active" href="/home">Početna stranica</a></li>
-      <li><a href="/assigned">Moje utakmice</a></li>
-      <li><a href="/absence">Odsustvo</a></li>
-      <li><a href="/expenses">Putni troškovi</a></li>
-      <li><a href="/rules">Dokumenti</a></li>
-      <li><a href="/exams">Ispiti</a></li>
-      <li><a href="#">Upute za korištenje sustava</a></li>
-    </ul>
-  </nav>
+
 
   <!-- Content -->
   <section class="content">
