--- a/src/app/components/time-absent/time-absent.component.html
+++ b/src/app/components/time-absent/time-absent.component.html
@@ -1,17 +1,9 @@
 <app-header></app-header>
+
+<app-sidebar></app-sidebar>
+
 <div class="main-layout">
-    <!-- Sidebar -->
-    <nav class="sidebar">
-        <ul>
-            <li><a href="/home">Početna stranica</a></li>
-            <li><a href="/assigned">Moje utakmice</a></li>
-            <li><a class="active" href="/absence">Odsustvo</a></li>
-            <li><a href="/expenses">Putni troškovi</a></li>
-            <li><a href="/rules">Dokumenti</a></li>
-            <li><a href="/exams">Ispiti</a></li>
-            <li><a href="#">Upute za korištenje sustava</a></li>
-        </ul>
-    </nav>
+
     <!-- Content -->
     <section class="content">
         <div class="page-header">
